# Ski-Pass-Renewal-Analysis

./: README.md  pyproject.toml
Data/Bronze/: guest_demographics.txt  guest_transactions.txt  guest_visitation.txt  resort_dimensions.txt
ski_pass_dbt/: dbt_project.yml
ski_pass_dbt/models/: sources.yml
ski_pass_dbt/models/gold/: gold_customer_features.sql  gold_customer_purchases.sql  gold_customer_trips.sql  schema.yml
ski_pass_dbt/models/silver/: schema.yml  silver_guest_demographics.sql  silver_guest_transactions.sql  silver_guest_visitation.sql  silver_resort_dimensions.sql
src/models/: data_check.py  evaluate.py  predict.py  train.py
